# one-axis-stage

./: .bumpversion.cfg  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  pr-review.yml  release.yml
api/: index.html
cli/: index.html
docs/: api.md  cli.md  getting_started.md  index.md  usage.md
examples/: api_scan_devices.py  example_config.yaml_saved.yaml  example_controller.py  example_interface.py
firmware/: firmware.ino
getting_started/: index.html
one_axis_stage/: __init__.py  api.py  axis.py  connection.py  controller.py  interface.py
search/: search_index.json
src/one_axis_stage/: __init__.py  api.py  axis.py  cli.py  connection.py  controller.py  interface.py
tests/: api_scan_devices.py  example_config.yaml  example_controller.py  example_interface.py  test_cli.py  test_jog_sim.py  test_unit.py
usage/: index.html
