[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "one-axis-stage"
dynamic = ["version"]
description = "Hardware design and software for modular, low-cost one-axis stages"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [
    { name = "Lars B. Rollik", email = "lars@rollik.me" },
]
requires-python = ">=3.10"
dependencies = [
    "pyserial",
    "pyyaml",
]

[project.urls]
Homepage = "https://github.com/murineshiftwork/one-axis-stage"
Documentation = "https://murineshiftwork.github.io/one-axis-stage/"
"Issue Tracker" = "https://github.com/murineshiftwork/one-axis-stage/issues"

[project.scripts]
stage = "one_axis_stage.cli:main"

[project.optional-dependencies]
cli = ["readchar"]
dev = [
    "commitizen",
    "pytest",
    "pytest-cov",
    "pre-commit",
    "ruff",
    "mypy",
    "types-PyYAML",
]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
]

# ---------------------------------------------------------------------------
# Build
# ---------------------------------------------------------------------------

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.1"

[tool.hatch.build.targets.wheel]
packages = ["src/one_axis_stage"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/one_axis_stage",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
    "/CITATION.cff",
    "/VERSION",
]

# ---------------------------------------------------------------------------
# Commitizen
# ---------------------------------------------------------------------------

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "commitizen"
version = "0.2.0"
tag_format = "v$version"
update_changelog_on_bump = false
version_files = ["VERSION"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=one_axis_stage --durations=0"

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "YTT", "SIM", "PTH", "TCH", "PYI"]
fixable = ["ALL"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------

[tool.mypy]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["one_axis_stage.connection", "one_axis_stage.api"]
ignore_errors = true

# ---------------------------------------------------------------------------
# uv
# ---------------------------------------------------------------------------

[tool.uv]
environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'darwin'",
    "sys_platform == 'win32'",
]
